@@ -2,6 +2,7 @@ v1.3.2 (2018.08.xx)
   - Update cURL library to version 7.61.0
   - Fix bug causing HTTP stream to remain in a paused state indefinitely if the ring buffer has been completely filled
   - Remove "DVR stream read operation timeout (milliseconds)" advanced option
+  - Fix bug causing potential access violation when system is suspended during an active Live TV or Recorded TV stream
   - (UWP) Initialize release of modified APPX packages for Universal Windows Platform Win32 and x64 targets
 
 v1.3.1 (2018.08.05)
